[package]
authors = ["Yann Ramin <atrus@stackworks.net>"]
edition = "2018"
readme = "README.md"
name = "same51demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
alloc-cortex-m = "0.4"

usb-device = "0.2"
usbd-serial = "0.1"

[dependencies.atsamd-hal]
features = ["same51j"]
git = "https://github.com/atsamd-rs/atsamd"
revision = "master"
#path = "../atsamd/hal"

[dependencies.atsame51j]
#path = "../atsamd/pac/atsame51j"
git = "https://github.com/atsamd-rs/atsamd"
revision = "master"


[dependencies.blueacro_driver_hv_bsp]
path = "../blueacro_driver_hv_bsp"
features = ["default", "rt", "usb"]
# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "same51demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
